backend/publicapi/config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-api
  template:
    metadata:
      labels:
        app: public-api
    spec:
      containers:
      - name: public-api
        image: ghcr.io/lancewells/loot-loadout/public-api
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080
            name: http-port
          - containerPort: 9090
            name: grpc-port
