backend/publicapi/config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-api
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      name: http-port
    - protocol: TCP
      port: 9090
      name: grpc-port
  selector:
    app: public-api
