backend/publicapi/config/base/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-api-http
  labels:
    name: public-api-http
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: public-api
            port: 
              number: 8080
